Hook up a very simple controller :)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "connect-livereload": "~0.3.2",
     "grunt-contrib-compass": "~0.7.0",
     "time-grunt": "~0.2.7",
-    "load-grunt-tasks": "~0.2.1"
+    "load-grunt-tasks": "~0.2.1",
     "karma": "~0.10",
     "protractor": "^1.1.1",
     "http-server": "^0.6.1",
