--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,16 @@
   "license": "GPL",
   "private": true,
   "dependencies": {
-    "angular": "1.2.x",
-    "angular-route": "1.2.x",
-    "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.x",
-    "angular-cookies": "1.2.x",
-    "html5-boilerplate": "~4.3.0"
+    "angular": "1.3.x",
+    "angular-route": "1.3.x",
+    "angular-loader": "1.3.x",
+    "angular-mocks": "~1.3.x",
+    "angular-cookies": "1.3.x",
+    "html5-boilerplate": "~4.3.0",
+    "jquery": "2.1.3",
+    "bootstrap": "~3.3.2"
+  },
+  "resolutions": {
+    "angular": "1.3.x"
   }
 }
