another attempt at bower on heroku

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "postinstall": "bower install",
+    "postinstall": "./node_modules/bower/bin/bower install",
 
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
