--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "karma-junit-reporter": "^0.2.2"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.8.0",
+    "npm":  ">=2.1.x:
   },
   "scripts": {
     "start": "node index.js",
