--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "engines": {
     "node": ">=0.8.0",
-    "npm":  ">=2.1.x:
+    "npm":  ">=2.1.x"
   },
   "scripts": {
     "start": "node index.js",
