--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "bower install",
 
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
