--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-loader": "1.3.x",
     "angular-mocks": "~1.3.x",
     "angular-cookies": "1.3.x",
+    "angular-resource": "1.3.x",
     "html5-boilerplate": "~4.3.0",
     "jquery": "2.1.3",
     "bootstrap": "~3.3.2"
